feat: Google Spreadsheet 통합 구현
- Google Apps Script를 활용한 폼 데이터 자동 저장
- 출마자 등록 및 정책 제안 폼에 Google Sheets 연동 추가
- 유틸리티 함수 추가 (src/lib/googleSheets.ts)
- Apps Script 코드 및 배포 가이드 포함 (google-apps-scripts/)
- 환경 변수로 Google Apps Script URL 관리
- 폼 제출 성공 시 자동 초기화 기능 추가

--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>서울사회복지사 6.3 지방선거 플랫폼</title>
+    <meta name="description" content="2026년 6월 3일 서울 지방선거를 위한 사회복지 정책 플랫폼" />
+    <meta name="author" content="서울사회복지사 선거 플랫폼" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="서울사회복지사 6.3 지방선거 플랫폼" />
+    <meta property="og:description" content="2026년 6월 3일 서울 지방선거를 위한 사회복지 정책 플랫폼" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
